# career-planning-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  项目概要介绍_基于AI的大学生职业规划智能体.md  项目详细方案_基于AI的大学生职业规划智能体.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_api.py  test_dify.py
backend/app/: main.py
backend/scripts/: _cli.py  benchmark_concurrency.py  build_career_requirement_profiles.py  build_career_title_aliases.py  build_job_requirement_profiles.py  build_transfer_group_embeddings.py  fetch_learning_resource_logos.py  generate_missing_learning_resources.py  import_job_postings.py  rebuild_job_transfer_v2.py  rebuild_snail_learning_resource_library.py  reset_job_requirement_graph.py  reset_job_transfer_v2_schema.py
backend/tests/: helpers.py  test_admin_data_dashboard.py  test_admin_users.py  test_auth.py  test_career_development_learning_resources_api.py  test_career_development_learning_resources_service.py  test_career_development_plan_workspace_service.py  test_career_requirement_profiles.py  test_career_transfer_profiles.py  test_competency_client_factory.py  test_config.py  test_document_parser.py  test_embeddings.py  test_favorites_api.py  test_goal_planning_task_stream.py  test_job_import.py  test_job_postings_api.py  test_job_requirement_comparisons_api.py  test_job_requirement_graph_api.py  test_job_requirement_profile.py  test_job_requirement_vertical_api.py  test_job_requirement_vertical_company_detail_service.py  test_job_requirement_vertical_service.py  test_job_transfer.py  (+13 more)
(+229 files in other folders)
